--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #server.servlet.context-path=/graphql-learnings
 #server.port = 6060
 #graphql.servlet.corsEnabled=true
+#graphql.notprivacysafe.graphql.GraphQL=false
 ##graphql.servlet.mapping=/graphql
 #graphql.servlet.enabled=true
 #
@@ -9,5 +10,5 @@
 #graphiql.mapping= /graphql
 #graphiql.endpoint= /graphql
 
-graphql.tools.schema-location-pattern=**/*.graphqls
+#graphql.tools.schema-location-pattern=**/*.graphqls
 
