--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 #server.servlet.context-path=/graphql-learnings
 #server.port = 6060
-#graphql.servlet.corsEnabled=true
+#server.servlet.corsEnabled=true
 #graphql.notprivacysafe.graphql.GraphQL=false
 ##graphql.servlet.mapping=/graphql
 #graphql.servlet.enabled=true
